# Kraps

./: .gitignore  CMakeLists.txt  Doxyfile  KrapsHeader.hpp  README.md  build.sh  main.c  main.cpp
dafx/: compressor.cpp  compressor.hpp  delay.cpp  delay.hpp  tubedist.cpp  tubedist.hpp
filters/: filtering.cpp  filtering.hpp  pulverizer.cpp  pulverizer.hpp  sample_fir.c  sample_fir.h
filters/DSPFilters/include/DspFilters/: Bessel.h  Biquad.h  Butterworth.h  Cascade.h  ChebyshevI.h  ChebyshevII.h  Common.h  Custom.h  Design.h  Dsp.h  Elliptic.h  Filter.h  Layout.h  Legendre.h  MathSupplement.h  Params.h  PoleFilter.h  RBJ.h  RootFinder.h  SmoothedFilter.h  State.h  Types.h  Utilities.h
generators/: basic_gen.hpp  generator.c  generator.cpp  generator.h  generator.hpp  polyblep.c  polyblep.h  sampler.cpp  sampler.hpp  wt.c  wt.cpp  wt.h  wt.hpp
misc/: decomposer.hpp  env_follower.cpp  env_follower.hpp  leaky_smoother.cpp  leaky_smoother.hpp  linear_smoother.cpp  linear_smoother.hpp  log.h  misc.h  misc.hpp
modulators/: adsr.c  adsr.cpp  adsr.h  adsr.hpp  attenuator.hpp  lfo.cpp  lfo.hpp  macros.hpp
processor/: io.hpp  processor.c  processor.cpp  processor.h  processor.hpp  processor_matrix.cpp  processor_matrix.hpp  processor_types.hpp
processor/midi/: note_manager.cpp  note_manager.hpp
processor/parameters/: parameter.hpp  parameter_table.hpp
routers/: matrix.c  matrix.h
serialize/base64/: base64.cpp  base64.hpp
simd/: avir_float8_avx.h  avx_mathfun.h
tinywav/: tinywav.c
